[tool.poetry]
name = "cron-parser"
version = "0.1.0"
description = "Cron parser"
authors = ["ash <ashu.banerjee.2289@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
